--- a/Basic_Linear_regression.ipynb
+++ b/Basic_Linear_regression.ipynb
@@ -45,7 +45,7 @@
       "metadata": {
         "id": "d9qH2SiWJkLU"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -65,7 +65,7 @@
       "metadata": {
         "id": "_fYh8IrKNdw5"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -78,9 +78,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DneJo7aMNj3a",
-        "outputId": "4a7afc80-59f3-4c82-d16a-fe2aa70d2018"
+        "outputId": "01725683-80a5-4430-cb67-d907978ddc8b"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -89,7 +89,7 @@
             "Downloading...\n",
             "From: https://drive.google.com/uc?id=1Wg-GKOIY8hXTNW3zq7pJ9bXD_vy_3le-\n",
             "To: /content/homes.csv\n",
-            "\r  0% 0.00/75.0 [00:00<?, ?B/s]\r100% 75.0/75.0 [00:00<00:00, 293kB/s]\n"
+            "\r  0% 0.00/75.0 [00:00<?, ?B/s]\r100% 75.0/75.0 [00:00<00:00, 122kB/s]\n"
           ]
         }
       ]
@@ -102,12 +102,13 @@
       "metadata": {
         "id": "Nva_S6LyKA8m"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "df.count()\n",
         "df"
       ],
       "metadata": {
@@ -116,9 +117,9 @@
           "height": 206
         },
         "id": "WBMbd0qWKGPB",
-        "outputId": "22dbbfb5-c8be-4b3d-f3eb-6c70d6bb4662"
+        "outputId": "89ce60c6-9494-49ab-c97e-ecb02d74df07"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -133,7 +134,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-ca1487b7-51ae-4c9c-a901-99f217fa02b4\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-f6239c19-75d4-422a-a386-2ffa247802d7\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -188,7 +189,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ca1487b7-51ae-4c9c-a901-99f217fa02b4')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f6239c19-75d4-422a-a386-2ffa247802d7')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -240,12 +241,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-ca1487b7-51ae-4c9c-a901-99f217fa02b4 button.colab-df-convert');\n",
+              "        document.querySelector('#df-f6239c19-75d4-422a-a386-2ffa247802d7 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-ca1487b7-51ae-4c9c-a901-99f217fa02b4');\n",
+              "        const element = document.querySelector('#df-f6239c19-75d4-422a-a386-2ffa247802d7');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -265,8 +266,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-dadfb1b1-3973-45a8-9763-390ef4649fe3\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-dadfb1b1-3973-45a8-9763-390ef4649fe3')\"\n",
+              "<div id=\"df-11bcc632-2270-4709-98a4-58d7759bc587\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-11bcc632-2270-4709-98a4-58d7759bc587')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -385,18 +386,79 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-dadfb1b1-3973-45a8-9763-390ef4649fe3 button');\n",
+              "        document.querySelector('#df-11bcc632-2270-4709-98a4-58d7759bc587 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
               "  </script>\n",
               "</div>\n",
+              "\n",
+              "  <div id=\"id_b7d6cff3-d62d-4e1a-8acc-07df53216910\">\n",
+              "    <style>\n",
+              "      .colab-df-generate {\n",
+              "        background-color: #E8F0FE;\n",
+              "        border: none;\n",
+              "        border-radius: 50%;\n",
+              "        cursor: pointer;\n",
+              "        display: none;\n",
+              "        fill: #1967D2;\n",
+              "        height: 32px;\n",
+              "        padding: 0 0 0 0;\n",
+              "        width: 32px;\n",
+              "      }\n",
+              "\n",
+              "      .colab-df-generate:hover {\n",
+              "        background-color: #E2EBFA;\n",
+              "        box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "        fill: #174EA6;\n",
+              "      }\n",
+              "\n",
+              "      [theme=dark] .colab-df-generate {\n",
+              "        background-color: #3B4455;\n",
+              "        fill: #D2E3FC;\n",
+              "      }\n",
+              "\n",
+              "      [theme=dark] .colab-df-generate:hover {\n",
+              "        background-color: #434B5C;\n",
+              "        box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "        filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "        fill: #FFFFFF;\n",
+              "      }\n",
+              "    </style>\n",
+              "    <button class=\"colab-df-generate\" onclick=\"generateWithVariable('df')\"\n",
+              "            title=\"Generate code using this dataframe.\"\n",
+              "            style=\"display:none;\">\n",
+              "\n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M7,19H8.4L18.45,9,17,7.55,7,17.6ZM5,21V16.75L18.45,3.32a2,2,0,0,1,2.83,0l1.4,1.43a1.91,1.91,0,0,1,.58,1.4,1.91,1.91,0,0,1-.58,1.4L9.25,21ZM18.45,9,17,7.55Zm-12,3A5.31,5.31,0,0,0,4.9,8.1,5.31,5.31,0,0,0,1,6.5,5.31,5.31,0,0,0,4.9,4.9,5.31,5.31,0,0,0,6.5,1,5.31,5.31,0,0,0,8.1,4.9,5.31,5.31,0,0,0,12,6.5,5.46,5.46,0,0,0,6.5,12Z\"/>\n",
+              "  </svg>\n",
+              "    </button>\n",
+              "    <script>\n",
+              "      (() => {\n",
+              "      const buttonEl =\n",
+              "        document.querySelector('#id_b7d6cff3-d62d-4e1a-8acc-07df53216910 button.colab-df-generate');\n",
+              "      buttonEl.style.display =\n",
+              "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "      buttonEl.onclick = () => {\n",
+              "        google.colab.notebook.generateWithVariable('df');\n",
+              "      }\n",
+              "      })();\n",
+              "    </script>\n",
+              "  </div>\n",
+              "\n",
               "    </div>\n",
               "  </div>\n"
-            ]
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "dataframe",
+              "variable_name": "df",
+              "summary": "{\n  \"name\": \"df\",\n  \"rows\": 5,\n  \"fields\": [\n    {\n      \"column\": \"area\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 540,\n        \"min\": 2600,\n        \"max\": 4000,\n        \"num_unique_values\": 5,\n        \"samples\": [\n          3000,\n          4000,\n          3200\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"price\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 74949,\n        \"min\": 550000,\n        \"max\": 725000,\n        \"num_unique_values\": 5,\n        \"samples\": [\n          565000,\n          725000,\n          610000\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
+            }
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 10
         }
       ]
     },
@@ -408,7 +470,7 @@
       "metadata": {
         "id": "m5zsGWFxKG_o"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
