--- a/Chatbot_Gemini.ipynb
+++ b/Chatbot_Gemini.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNYb0au78M7dZBw8f7KDOjY",
+      "authorship_tag": "ABX9TyO4NruMDMXh8RrmCbXrcxUy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,7 +60,6 @@
         "\n",
         "# Configure Gemini API\n",
         "GEMINI_API_KEY = userdata.get(\"GeminiAPIKey\")\n",
-        "#genai.configure(api_key=GEMINI_API_KEY)\n",
         "\n",
         "# Simple function to scrape text from a URL\n",
         "def scrape_text(url):\n",
@@ -85,8 +84,7 @@
         "    client = genai.Client(api_key=GEMINI_API_KEY, http_options=types.HttpOptions(api_version='v1alpha'))\n",
         "\n",
         "    # Generate the response\n",
-        "    response = client.models.generate_content(\n",
-        "    model='gemini-2.0-flash-001', contents='Can I customise sub items in Kissflow Boards?')\n",
+        "    response = client.models.generate_content(model='gemini-2.0-flash-001', contents='Can I customise sub items in Kissflow Boards?')\n",
         "\n",
         "    return response.text\n",
         "\n",
