Updated the prompt for Kissflow

--- a/Chatbot_Gemini.ipynb
+++ b/Chatbot_Gemini.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPnzGsq+avd92lRoI1gx+t/",
+      "authorship_tag": "ABX9TyOqm4ONLSHVzYzgtZ5WhJdA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,72 +28,41 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "YdO4dbBjXCcA",
-        "outputId": "a9af12e6-fa8d-43b5-8eb7-9427f0d8639d"
+        "outputId": "ce3a5ffb-7049-4058-9108-077caafc4f63"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Yes, you can customize subitems in Boards, although the extent of customization depends on the specific platform you're using.  Since \"Boards\" is a general term, let's break it down by the most popular platforms and their capabilities:\n",
+            "No, unfortunately, **you cannot add custom fields directly to subitems in Kissflow Boards**.  Kissflow Boards does not currently offer this functionality. Subitems inherit certain properties from the parent item, but they don't have the flexibility for unique, custom fields.\n",
             "\n",
-            "**1. monday.com:**\n",
+            "Here's why and what you can do instead:\n",
             "\n",
-            "*   **Highly Customizable:** monday.com is renowned for its flexibility. You can customize almost everything about subitems:\n",
-            "    *   **Columns (Properties):** You can add custom columns to subitems to track specific information. These can be text columns, numbers, dropdowns, date columns, people columns, status columns, and more.\n",
-            "    *   **Views:** You can create different views of your subitems, filtering and grouping them according to your needs. For example, you can have a view that shows subitems assigned to a specific person or those that are overdue.\n",
-            "    *   **Automations:**  Automations are very powerful.  You can automate tasks related to subitems, such as creating subitems when a status changes, moving subitems between groups based on their status, or sending notifications when a subitem is due.\n",
-            "    *   **Templates:** Create templates for frequently used subitem structures to save time and ensure consistency.\n",
-            "    *   **Dependencies:**  You can set up dependencies between subitems (or between subitems and main items) to visualize and manage task dependencies.\n",
-            "    *   **Apps & Integrations:** Connect to other apps and services to further extend the functionality of your subitems.\n",
+            "* **Design Limitation:** Kissflow's current board structure primarily uses subitems for task breakdown and dependency management within a parent task. They are deliberately lightweight and not designed to hold extensive unique data.\n",
+            "* **Focus on Parent Item:** The primary intent is to manage detailed information and custom data points within the parent item.\n",
             "\n",
-            "**2. Asana:**\n",
+            "**Workarounds and Alternatives:**\n",
             "\n",
-            "*   **Subtasks with Fields:** Asana allows you to create subtasks within tasks. You can customize these subtasks by:\n",
-            "    *   **Assignee:** Assign each subtask to a specific team member.\n",
-            "    *   **Due Date:** Set a due date for each subtask.\n",
-            "    *   **Description:** Provide a detailed description of the subtask.\n",
-            "    *   **Custom Fields (Premium/Business):** If you have a premium or business plan, you can add custom fields to subtasks, which can be dropdowns, numbers, text fields, etc., to track specific data.\n",
-            "    *   **Dependencies:**  Establish dependencies between subtasks.\n",
-            "    *   **Rules (Automation):** You can automate some subtask processes with rules (e.g., automatically assign a subtask when its parent task is created).\n",
+            "1. **Use the Description Field:**  The description field within a subitem can be used to add *some* information.  This is a free-form text area, so it's not structured data.\n",
             "\n",
-            "**3. Trello:**\n",
+            "2. **Add Comments:** Similar to the description field, comments can provide extra context, but they aren't searchable or easily reported upon like a proper field.\n",
             "\n",
-            "*   **Checklists within Cards:** Trello doesn't have \"subitems\" in the same way as monday.com or Asana. Instead, you use checklists within cards to represent subtasks.\n",
-            "    *   **Checklist Items:** Each item in a checklist represents a subtask.\n",
-            "    *   **Assignees (Power-Ups):**  Trello doesn't natively support assigning checklist items. You need to use a Power-Up (e.g., Card Checklist) to add this functionality.\n",
-            "    *   **Due Dates (Power-Ups):** Similar to assignees, you need a Power-Up to add due dates to checklist items.\n",
-            "    *   **Limited Customization:** Trello's customization for checklist items is more limited than monday.com or Asana.\n",
+            "3. **Break into Separate Tasks:** If the information you want to store in the subitem's custom fields is *critical* and requires structured tracking, the best approach is usually to promote the subitem to a full-fledged task.  This will allow you to use all the custom fields you need.  This requires re-thinking how you organize your board.\n",
             "\n",
-            "**4. Jira:**\n",
+            "4. **Third-Party Integrations:** While not a direct solution, you might be able to use Kissflow's integration capabilities to link to external tools (like a spreadsheet or a dedicated task management tool). Store the extra data there, and link it back to the parent item or subitem in Kissflow.\n",
             "\n",
-            "*   **Sub-tasks as Issue Types:** Jira allows you to create sub-tasks as a specific issue type.\n",
-            "    *   **Custom Fields:** You can add custom fields to your sub-task issue type to track specific information.\n",
-            "    *   **Workflows:** Sub-tasks can follow specific workflows, allowing you to manage their progress.\n",
-            "    *   **Linking:**  Sub-tasks are linked to their parent issue.\n",
-            "    *   **Transitions:** Sub-tasks can have different statuses and transitions.\n",
-            "    *   **Reporting:** You can report on the status of sub-tasks.\n",
+            "5. **Consider a Different Kissflow App:** If you require the full power of custom fields at every level, it might be worth considering building a custom application using Kissflow's platform.  This would give you granular control over data structure and fields, but it would be a more significant development effort.\n",
             "\n",
             "**In Summary:**\n",
             "\n",
-            "*   The degree to which you can customize subitems depends on the platform you are using.\n",
-            "*   monday.com offers the most comprehensive customization options.\n",
-            "*   Asana offers good customization, especially with premium plans.\n",
-            "*   Trello's customization is more limited and relies heavily on Power-Ups.\n",
-            "*   Jira is very powerful and customizable but geared towards software development.\n",
-            "\n",
-            "To give you the best advice, please tell me:\n",
-            "\n",
-            "*   **Which \"Boards\" platform are you using?** (e.g., monday.com, Asana, Trello, Jira, something else)\n",
-            "*   **What kind of customization are you hoping to achieve?** (e.g., adding custom fields, automating tasks, changing the layout)\n",
-            "\n",
-            "Once I have this information, I can give you more specific instructions.\n",
+            "Kissflow Boards, while powerful, has limitations regarding custom fields within subitems. The key is to understand this design and choose the workaround that best fits your needs, often involving either accepting limitations, restructuring tasks, or exploring integrations.  If highly structured data for subitems is essential, consider alternatives within Kissflow or external tools.\n",
             "\n"
           ]
         }
@@ -139,7 +108,7 @@
         "# Example usage\n",
         "if __name__ == \"__main__\":\n",
         "    test_url = 'https://community.kissflow.com/category/documentation-section'\n",
-        "    user_prompt = 'Can I customise sub items in Boards?'\n",
+        "    user_prompt = 'Can I add new fields to the sub items in Kissflow Boards?'\n",
         "\n",
         "    generated_text = generate_response_from_url(user_prompt, test_url)\n",
         "    print(generated_text)\n"
