Adding prompt and web page content

--- a/Chatbot_Gemini.ipynb
+++ b/Chatbot_Gemini.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOqm4ONLSHVzYzgtZ5WhJdA",
+      "authorship_tag": "ABX9TyOemD7ye2usLt6+89QWgZWJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,41 +28,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "YdO4dbBjXCcA",
-        "outputId": "ce3a5ffb-7049-4058-9108-077caafc4f63"
+        "outputId": "1ff84dd4-2a7a-4c9c-c142-f2206c457b83"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "No, unfortunately, **you cannot add custom fields directly to subitems in Kissflow Boards**.  Kissflow Boards does not currently offer this functionality. Subitems inherit certain properties from the parent item, but they don't have the flexibility for unique, custom fields.\n",
+            "Based on the Kissflow documentation provided, the answer is not explicitly stated. However, we can infer some possibilities:\n",
             "\n",
-            "Here's why and what you can do instead:\n",
+            "*   **Boards Documentation:** There is a dedicated section for \"Boards\" which includes \"Using boards\", \"Managing boards\", \"Board views\", and \"Reports in Boards\". This suggests there are customization options available.\n",
+            "*   **Forms & Expressions Documentation:** Another section dedicated to \"Forms & Expressions\", including sections on \"Forms\", \"Expressions\", \"Lists\", and importantly \"Fields\". Given the tight integration within Kissflow, it's likely there is a relationship between these elements and the board items. This suggest forms and fields could be used for item customization.\n",
+            "*   **Apps Documentation:** Since you can build apps in Kissflow, it's highly probable that you can use the app building functionality to customize boards and their sub-items.\n",
+            "*   **Lack of Direct Confirmation:** None of the provided documentation sections *directly* say \"You can add new fields to sub-items in Kissflow Boards\".\n",
             "\n",
-            "* **Design Limitation:** Kissflow's current board structure primarily uses subitems for task breakdown and dependency management within a parent task. They are deliberately lightweight and not designed to hold extensive unique data.\n",
-            "* **Focus on Parent Item:** The primary intent is to manage detailed information and custom data points within the parent item.\n",
+            "**Recommendation:**\n",
             "\n",
-            "**Workarounds and Alternatives:**\n",
-            "\n",
-            "1. **Use the Description Field:**  The description field within a subitem can be used to add *some* information.  This is a free-form text area, so it's not structured data.\n",
-            "\n",
-            "2. **Add Comments:** Similar to the description field, comments can provide extra context, but they aren't searchable or easily reported upon like a proper field.\n",
-            "\n",
-            "3. **Break into Separate Tasks:** If the information you want to store in the subitem's custom fields is *critical* and requires structured tracking, the best approach is usually to promote the subitem to a full-fledged task.  This will allow you to use all the custom fields you need.  This requires re-thinking how you organize your board.\n",
-            "\n",
-            "4. **Third-Party Integrations:** While not a direct solution, you might be able to use Kissflow's integration capabilities to link to external tools (like a spreadsheet or a dedicated task management tool). Store the extra data there, and link it back to the parent item or subitem in Kissflow.\n",
-            "\n",
-            "5. **Consider a Different Kissflow App:** If you require the full power of custom fields at every level, it might be worth considering building a custom application using Kissflow's platform.  This would give you granular control over data structure and fields, but it would be a more significant development effort.\n",
-            "\n",
-            "**In Summary:**\n",
-            "\n",
-            "Kissflow Boards, while powerful, has limitations regarding custom fields within subitems. The key is to understand this design and choose the workaround that best fits your needs, often involving either accepting limitations, restructuring tasks, or exploring integrations.  If highly structured data for subitems is essential, consider alternatives within Kissflow or external tools.\n",
+            "1.  **Consult the \"Boards\" and \"Forms & Expressions\" sections in Kissflow documentation:** Start by exploring these sections for details on customizing board items and utilizing forms and fields.\n",
+            "2.  **Experiment within Kissflow:** The best way to confirm is to try to add a new field to a sub-item within a Kissflow Board. The interface should guide you.\n",
+            "3.  **Contact Kissflow Support:** If you are still unable to confirm or require assistance, reach out to Kissflow support directly. They can provide specific guidance and confirm whether this functionality is available and how to implement it.\n",
             "\n"
           ]
         }
@@ -101,7 +91,7 @@
         "    client = genai.Client(api_key=GEMINI_API_KEY, http_options=types.HttpOptions(api_version='v1alpha'))\n",
         "\n",
         "    # Generate the response\n",
-        "    response = client.models.generate_content(model='gemini-2.0-flash-001', contents=prompt)\n",
+        "    response = client.models.generate_content(model='gemini-2.0-flash-001', contents=[prompt, webpage_content])\n",
         "\n",
         "    return response.text\n",
         "\n",
